2007-08-23  Jorn Baayen  <jorn@openedhand.com>

	* gssdp-1.0-uninstalled.pc.in:
	* gssdp-1.0.pc.in:

	Move libsoup req to Requires.Private.

2007-07-27  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client.c: (socket_source_cb):

	Fix compiler warning. Fixes #421.

	Patch by Priit Laes.

2007-07-26  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:

	Updated.

	* configure.ac:

	Bump version number to 0.4.

2007-07-26  Jorn Baayen  <jorn@openedhand.com>

	* gssdp-1.0.pc.in:

	List all dependencies.

2007-07-25  Jorn Baayen  <jorn@openedhand.com>

	* doc/gssdp-sections.txt:
	* libgssdp/gssdp-error.c:

	Doc polish.

2007-07-25  Jorn Baayen  <jorn@openedhand.com>

	* README:

	Somewhat better description.

2007-07-24  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:
	* configure.ac:

	Release 0.3.

2007-07-08  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-protocol.h:

	s/bye-bye/byebye.

	* libgssdp/gssdp-resource-group.c: (gssdp_resource_group_dispose):

	byebye resources before unreffing client.

2007-07-03  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:
	* configure.ac:

	Release 0.2.

2007-06-30  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-error.c: (gssdp_error_quark):

	Change quark name for consistency.

2007-06-30  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client.c: (gssdp_client_set_property):
	* libgssdp/gssdp-error.h:
	* libgssdp/gssdp-resource-browser.c:
	* libgssdp/gssdp-resource-group.c:

	Use error codes.

2007-06-30  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c: (resource_available):

	Use SoupDate for Expires header support.

2007-06-13  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Use --without-libglade rather than --disable-libglade.

2007-06-13  Ross Burton  <ross@openedhand.com>

	* tools/Makefile.am:
	Dist the glade.

2007-05-26  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-client.c:
	* libgssdp/gssdp-client.h:
	* libgssdp/gssdp-error.c:
	* libgssdp/gssdp-resource-browser.c: